<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@mipmap/ifar"
    android:gravity="center"
    android:weightSum="10"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="2">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:background="@mipmap/kglow">
        </ImageView>

        <TextView
            android:id="@+id/iFarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text0"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="bold|italic">
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/price_grid"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="170dp"
            android:layout_margin="10dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/price_button"
                android:src="@drawable/ic_attach_money_black_24dp"
                android:padding="10dp">
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:layout_marginTop="10dp"
                android:text="@string/text1">
            </TextView>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/viewV"
                android:layout_margin="10dp">
            </View>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text6"
                android:textStyle="italic"
                android:padding="5dp"
                android:textColor="#2D3741">
            </TextView>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/machine_grid"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="170dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/equip_button"
                    android:src="@drawable/ic_polymer_black_24dp"
                    android:padding="10dp">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:text="@string/text2">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/viewV"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text7"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:textColor="#2D3741">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="170dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/fertilz_button"
                    android:src="@drawable/ic_format_shapes_black_24dp"
                    android:padding="10dp">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:text="@string/text3">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/viewV"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text8"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:textColor="#2D3741">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="160dp"
            android:layout_height="170dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/insect_button"
                    android:src="@drawable/ic_spa_black_24dp"
                    android:padding="10dp">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:text="@string/text4">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/viewV"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text9"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:textColor="#2D3741">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="340dp"
            android:layout_height="150dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/tip_button"
                    android:src="@drawable/ic_timeline_black_24dp"
                    android:padding="10dp">
                </ImageView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:layout_marginTop="10dp"
                    android:text="@string/text5">
                </TextView>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/viewV"
                    android:layout_margin="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/text10"
                    android:textStyle="italic"
                    android:padding="5dp"
                    android:textColor="#2D3741">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>